[package]
name = "cogito-test-fixtures"
version = "0.2.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
cogito-protocol.workspace = true

anyhow.workspace = true
async-trait.workspace = true
tokio.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
ulid.workspace = true
chrono.workspace = true

[dev-dependencies]
# Re-declare cogito-protocol with the `test-support` feature so the
# shared `JobManager` contract suite (and any future harness traits) is
# in scope during test compilation. Production builds of this crate
# still pick up the dependency-section entry above, without the feature.
cogito-protocol = { workspace = true, features = ["test-support"] }
cogito-store.workspace = true
tempfile.workspace = true

[[bin]]
name = "write-sample"
path = "src/bin/write_sample.rs"

[lints]
workspace = true
